Refactor security configuration and user management; update CORS settings, authentication endpoints, and user registration logic